src/FinancialForce Accounting/objects/codaMatchingReference__c.object
<CustomObject>
    <customHelpPage>codahelpmatchingreference</customHelpPage>
    <description>An internal object that provides an automatically incrementing number for the cash matching and undo matching reference.</description>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Cancel Payments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Matching References</relationshipLabel>
        <relationshipName>MatchingReferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Number</label>
        <referenceTo>codaPayment__c</referenceTo>
        <relationshipLabel>Matching References</relationshipLabel>
        <relationshipName>MatchingReferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Matching Reference</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Matching Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matching References</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>